--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title> sahil malviya </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Jaiba khan - Portfolio" />
+	<meta name="description" content="Sahil malviya - Portfolio" />
 	<meta name="keywords" content="" />
 
 
